--- a/themes/wav-theme/style.css
+++ b/themes/wav-theme/style.css
@@ -2316,6 +2316,8 @@ Please check the Skeleton style from Events/Setting/Display in dashboard and the
     bottom: .5rem; }
   .sub-menu {
     width: 120px; }
+    .sub-menu a {
+      max-width: 120px; }
   .menu-item-has-children:hover > ul {
     display: block; }
   .home .site-header, .post-type-archive-tribe_events .site-header, .page-id-81 .site-header, .page-template-contact .site-header {
